src/refi/RefiParser.java
// Generated from C:/Users/robg3/workspace/refi/src/refi/RefiParser.g4 by ANTLR 4.13.1

package refi;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class RefiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CHAR=1, COLON=2, COMMA=3, HEX_NUMBER=4, INT=5, LEFTCURLY=6, LEFTPAREN=7, 
		OCTAL_NUMBER=8, RIGHTCURLY=9, RIGHTPAREN=10, STRING=11, VERTICAL=12, WS=13, 
		ANY=14, ANYWILD=15, BACKTICK=16, BELL=17, BOL=18, CAPTURE=19, CASEINS=20, 
		CASEINSOFF=21, COMMENTS=22, CTRL=23, DIGIT=24, DOTALL=25, EITHER=26, ESCAPE=27, 
		EOL=28, FLAGS=29, FORMFEED=30, HEX=31, MULTILINE=32, NEWLINE=33, NONDIGIT=34, 
		NOT=35, OCTAL=36, OPTIONAL=37, OR=38, RANGE=39, RETURN=40, SOME=41, TAB=42, 
		UNICODECASE=43, UNIXLINES=44, WILD=45, WORDBOUNDARY=46, ZZ=47;
	public static final int
		RULE_expression = 0, RULE_backeted_matcher = 1, RULE_matcher = 2, RULE_literal_matcher = 3, 
		RULE_capture_matcher = 4, RULE_caseins = 5, RULE_caseinsoff = 6, RULE_char = 7, 
		RULE_ctrl_matcher = 8, RULE_either_matcher = 9, RULE_expr_param_matcher = 10, 
		RULE_flags = 11, RULE_hex_matcher = 12, RULE_nondigit = 13, RULE_not_matcher = 14, 
		RULE_octal_matcher = 15, RULE_or_matcher = 16, RULE_range_matcher = 17, 
		RULE_string = 18, RULE_function_matcher = 19, RULE_matcher_name = 20, 
		RULE_anywild = 21, RULE_backtick = 22, RULE_bell = 23, RULE_bol = 24, 
		RULE_digit = 25, RULE_escape = 26, RULE_eol = 27, RULE_flagname = 28, 
		RULE_formfeed = 29, RULE_newline = 30, RULE_return = 31, RULE_tab = 32, 
		RULE_unicodecase = 33, RULE_unixlines = 34, RULE_wild = 35, RULE_wordboundary = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"expression", "backeted_matcher", "matcher", "literal_matcher", "capture_matcher", 
			"caseins", "caseinsoff", "char", "ctrl_matcher", "either_matcher", "expr_param_matcher", 
			"flags", "hex_matcher", "nondigit", "not_matcher", "octal_matcher", "or_matcher", 
			"range_matcher", "string", "function_matcher", "matcher_name", "anywild", 
			"backtick", "bell", "bol", "digit", "escape", "eol", "flagname", "formfeed", 
			"newline", "return", "tab", "unicodecase", "unixlines", "wild", "wordboundary"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CHAR", "COLON", "COMMA", "HEX_NUMBER", "INT", "LEFTCURLY", "LEFTPAREN", 
			"OCTAL_NUMBER", "RIGHTCURLY", "RIGHTPAREN", "STRING", "VERTICAL", "WS", 
			"ANY", "ANYWILD", "BACKTICK", "BELL", "BOL", "CAPTURE", "CASEINS", "CASEINSOFF", 
			"COMMENTS", "CTRL", "DIGIT", "DOTALL", "EITHER", "ESCAPE", "EOL", "FLAGS", 
			"FORMFEED", "HEX", "MULTILINE", "NEWLINE", "NONDIGIT", "NOT", "OCTAL", 
			"OPTIONAL", "OR", "RANGE", "RETURN", "SOME", "TAB", "UNICODECASE", "UNIXLINES", 
			"WILD", "WORDBOUNDARY", "ZZ"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RefiParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RefiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RefiParser.EOF, 0); }
		public List<MatcherContext> matcher() {
			return getRuleContexts(MatcherContext.class);
		}
		public MatcherContext matcher(int i) {
			return getRuleContext(MatcherContext.class,i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(74);
				matcher();
				}
				}
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 140733155625090L) != 0) );
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Backeted_matcherContext extends ParserRuleContext {
		public TerminalNode LEFTPAREN() { return getToken(RefiParser.LEFTPAREN, 0); }
		public TerminalNode RIGHTPAREN() { return getToken(RefiParser.RIGHTPAREN, 0); }
		public List<MatcherContext> matcher() {
			return getRuleContexts(MatcherContext.class);
		}
		public MatcherContext matcher(int i) {
			return getRuleContext(MatcherContext.class,i);
		}
		public Backeted_matcherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_backeted_matcher; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterBacketed_matcher(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitBacketed_matcher(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitBacketed_matcher(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Backeted_matcherContext backeted_matcher() throws RecognitionException {
		Backeted_matcherContext _localctx = new Backeted_matcherContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_backeted_matcher);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(LEFTPAREN);
			setState(83); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(82);
				matcher();
				}
				}
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 140733155625090L) != 0) );
			setState(87);
			match(RIGHTPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatcherContext extends ParserRuleContext {
		public Backeted_matcherContext backeted_matcher() {
			return getRuleContext(Backeted_matcherContext.class,0);
		}
		public AnywildContext anywild() {
			return getRuleContext(AnywildContext.class,0);
		}
		public BellContext bell() {
			return getRuleContext(BellContext.class,0);
		}
		public BolContext bol() {
			return getRuleContext(BolContext.class,0);
		}
		public BacktickContext backtick() {
			return getRuleContext(BacktickContext.class,0);
		}
		public Capture_matcherContext capture_matcher() {
			return getRuleContext(Capture_matcherContext.class,0);
		}
		public CaseinsContext caseins() {
			return getRuleContext(CaseinsContext.class,0);
		}
		public CaseinsoffContext caseinsoff() {
			return getRuleContext(CaseinsoffContext.class,0);
		}
		public CharContext char_() {
			return getRuleContext(CharContext.class,0);
		}
		public Ctrl_matcherContext ctrl_matcher() {
			return getRuleContext(Ctrl_matcherContext.class,0);
		}
		public DigitContext digit() {
			return getRuleContext(DigitContext.class,0);
		}
		public Either_matcherContext either_matcher() {
			return getRuleContext(Either_matcherContext.class,0);
		}
		public EolContext eol() {
			return getRuleContext(EolContext.class,0);
		}
		public EscapeContext escape() {
			return getRuleContext(EscapeContext.class,0);
		}
		public Expr_param_matcherContext expr_param_matcher() {
			return getRuleContext(Expr_param_matcherContext.class,0);
		}
		public FormfeedContext formfeed() {
			return getRuleContext(FormfeedContext.class,0);
		}
		public FlagsContext flags() {
			return getRuleContext(FlagsContext.class,0);
		}
		public Hex_matcherContext hex_matcher() {
			return getRuleContext(Hex_matcherContext.class,0);
		}
		public NewlineContext newline() {
			return getRuleContext(NewlineContext.class,0);
		}
		public NondigitContext nondigit() {
			return getRuleContext(NondigitContext.class,0);
		}
		public Not_matcherContext not_matcher() {
			return getRuleContext(Not_matcherContext.class,0);
		}
		public Octal_matcherContext octal_matcher() {
			return getRuleContext(Octal_matcherContext.class,0);
		}
		public Or_matcherContext or_matcher() {
			return getRuleContext(Or_matcherContext.class,0);
		}
		public Range_matcherContext range_matcher() {
			return getRuleContext(Range_matcherContext.class,0);
		}
		public ReturnContext return_() {
			return getRuleContext(ReturnContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public Function_matcherContext function_matcher() {
			return getRuleContext(Function_matcherContext.class,0);
		}
		public TabContext tab() {
			return getRuleContext(TabContext.class,0);
		}
		public UnicodecaseContext unicodecase() {
			return getRuleContext(UnicodecaseContext.class,0);
		}
		public UnixlinesContext unixlines() {
			return getRuleContext(UnixlinesContext.class,0);
		}
		public WildContext wild() {
			return getRuleContext(WildContext.class,0);
		}
		public WordboundaryContext wordboundary() {
			return getRuleContext(WordboundaryContext.class,0);
		}
		public MatcherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matcher; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterMatcher(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitMatcher(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitMatcher(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatcherContext matcher() throws RecognitionException {
		MatcherContext _localctx = new MatcherContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_matcher);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				backeted_matcher();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				anywild();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				bell();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(92);
				bol();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(93);
				backtick();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(94);
				capture_matcher();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(95);
				caseins();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(96);
				caseinsoff();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(97);
				char_();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(98);
				ctrl_matcher();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(99);
				digit();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(100);
				either_matcher();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(101);
				eol();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(102);
				escape();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(103);
				expr_param_matcher();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(104);
				formfeed();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(105);
				flags();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(106);
				hex_matcher();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(107);
				newline();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(108);
				nondigit();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(109);
				not_matcher();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(110);
				octal_matcher();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(111);
				or_matcher();
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(112);
				range_matcher();
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(113);
				return_();
				}
				break;
			case 26:
				enterOuterAlt(_localctx, 26);
				{
				setState(114);
				string();
				}
				break;
			case 27:
				enterOuterAlt(_localctx, 27);
				{
				setState(115);
				function_matcher();
				}
				break;
			case 28:
				enterOuterAlt(_localctx, 28);
				{
				setState(116);
				tab();
				}
				break;
			case 29:
				enterOuterAlt(_localctx, 29);
				{
				setState(117);
				unicodecase();
				}
				break;
			case 30:
				enterOuterAlt(_localctx, 30);
				{
				setState(118);
				unixlines();
				}
				break;
			case 31:
				enterOuterAlt(_localctx, 31);
				{
				setState(119);
				wild();
				}
				break;
			case 32:
				enterOuterAlt(_localctx, 32);
				{
				setState(120);
				wordboundary();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Literal_matcherContext extends ParserRuleContext {
		public BacktickContext backtick() {
			return getRuleContext(BacktickContext.class,0);
		}
		public Backeted_matcherContext backeted_matcher() {
			return getRuleContext(Backeted_matcherContext.class,0);
		}
		public WildContext wild() {
			return getRuleContext(WildContext.class,0);
		}
		public Literal_matcherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal_matcher; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterLiteral_matcher(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitLiteral_matcher(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitLiteral_matcher(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Literal_matcherContext literal_matcher() throws RecognitionException {
		Literal_matcherContext _localctx = new Literal_matcherContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_literal_matcher);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BACKTICK:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				backtick();
				}
				break;
			case LEFTPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				backeted_matcher();
				}
				break;
			case WILD:
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				wild();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Capture_matcherContext extends ParserRuleContext {
		public Token name;
		public TerminalNode CAPTURE() { return getToken(RefiParser.CAPTURE, 0); }
		public TerminalNode LEFTCURLY() { return getToken(RefiParser.LEFTCURLY, 0); }
		public TerminalNode RIGHTCURLY() { return getToken(RefiParser.RIGHTCURLY, 0); }
		public List<MatcherContext> matcher() {
			return getRuleContexts(MatcherContext.class);
		}
		public MatcherContext matcher(int i) {
			return getRuleContext(MatcherContext.class,i);
		}
		public List<Backeted_matcherContext> backeted_matcher() {
			return getRuleContexts(Backeted_matcherContext.class);
		}
		public Backeted_matcherContext backeted_matcher(int i) {
			return getRuleContext(Backeted_matcherContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(RefiParser.COMMA, 0); }
		public TerminalNode STRING() { return getToken(RefiParser.STRING, 0); }
		public TerminalNode CHAR() { return getToken(RefiParser.CHAR, 0); }
		public Capture_matcherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_capture_matcher; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterCapture_matcher(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitCapture_matcher(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitCapture_matcher(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Capture_matcherContext capture_matcher() throws RecognitionException {
		Capture_matcherContext _localctx = new Capture_matcherContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_capture_matcher);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(CAPTURE);
			setState(129);
			match(LEFTCURLY);
			setState(132); 
			_errHandler.sync(this);
			_alt = 1+1;
			do {
				switch (_alt) {
				case 1+1:
					{
					setState(132);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						setState(130);
						matcher();
						}
						break;
					case 2:
						{
						setState(131);
						backeted_matcher();
						}
						break;
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(134); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(136);
				match(COMMA);
				setState(137);
				((Capture_matcherContext)_localctx).name = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==CHAR || _la==STRING) ) {
					((Capture_matcherContext)_localctx).name = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(140);
			match(RIGHTCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CaseinsContext extends ParserRuleContext {
		public TerminalNode CASEINS() { return getToken(RefiParser.CASEINS, 0); }
		public CaseinsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_caseins; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterCaseins(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitCaseins(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitCaseins(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CaseinsContext caseins() throws RecognitionException {
		CaseinsContext _localctx = new CaseinsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_caseins);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(CASEINS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CaseinsoffContext extends ParserRuleContext {
		public TerminalNode CASEINSOFF() { return getToken(RefiParser.CASEINSOFF, 0); }
		public CaseinsoffContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_caseinsoff; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterCaseinsoff(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitCaseinsoff(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitCaseinsoff(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CaseinsoffContext caseinsoff() throws RecognitionException {
		CaseinsoffContext _localctx = new CaseinsoffContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_caseinsoff);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(CASEINSOFF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CharContext extends ParserRuleContext {
		public TerminalNode CHAR() { return getToken(RefiParser.CHAR, 0); }
		public CharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_char; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterChar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitChar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitChar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CharContext char_() throws RecognitionException {
		CharContext _localctx = new CharContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_char);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(CHAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ctrl_matcherContext extends ParserRuleContext {
		public TerminalNode CTRL() { return getToken(RefiParser.CTRL, 0); }
		public TerminalNode LEFTCURLY() { return getToken(RefiParser.LEFTCURLY, 0); }
		public TerminalNode INT() { return getToken(RefiParser.INT, 0); }
		public TerminalNode RIGHTCURLY() { return getToken(RefiParser.RIGHTCURLY, 0); }
		public Ctrl_matcherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ctrl_matcher; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterCtrl_matcher(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitCtrl_matcher(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitCtrl_matcher(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ctrl_matcherContext ctrl_matcher() throws RecognitionException {
		Ctrl_matcherContext _localctx = new Ctrl_matcherContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ctrl_matcher);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(CTRL);
			setState(149);
			match(LEFTCURLY);
			setState(150);
			match(INT);
			setState(151);
			match(RIGHTCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Either_matcherContext extends ParserRuleContext {
		public TerminalNode EITHER() { return getToken(RefiParser.EITHER, 0); }
		public TerminalNode LEFTCURLY() { return getToken(RefiParser.LEFTCURLY, 0); }
		public List<TerminalNode> CHAR() { return getTokens(RefiParser.CHAR); }
		public TerminalNode CHAR(int i) {
			return getToken(RefiParser.CHAR, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(RefiParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RefiParser.COMMA, i);
		}
		public TerminalNode RIGHTCURLY() { return getToken(RefiParser.RIGHTCURLY, 0); }
		public Either_matcherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_either_matcher; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterEither_matcher(this);
		}
